<resources>
    <string name="app_name">Tetramine</string>
    <string name="version">Version: %1$s</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="app_restart">To apply the settings, restart the application.</string>.

    <string name="play">Play</string>
    <string name="resume">Resume Game</string>
    <string name="statistics">Statistics</string>
    <string name="settings">Settings &amp; Appearance</string>
    <string name="about">About</string>

    <string name="view_game">View Game</string>
    <string name="exit">Exit</string>
    <string name="restart">Restart</string>
    <string name="guide">Controller Guide</string>
    <string name="guide_1">
"""Move left and right
Swipe left or right on the screen and the figure moves in the same direction"""
</string>
    <string name="guide_2">
"""Downward movement
Swipe your finger down - the figure will start to fall faster"""
</string>
    <string name="guide_3">
"""Hard drop
Make a sharp swipe straight down - the figure will immediately fall to the bottom"""
</string>
    <string name="guide_4">
"""Rotate figure
Simply tap the screen without moving your finger and the figure will rotate"""
</string>
    <string name="guide_5">
"""Have a good game!
Also check theme settings, control sensitivity change, modes and stats"""
</string>

    <string name="choose_mode">Choose Mode</string>
    <string name="classic_mode">Classic Game</string>
    <string name="classic_mode_desc">Classic version of the game</string>
    <string name="practice_mode">Practice Experience</string>
    <string name="practice_mode_desc">Practice playing at a certain tempo or just relax</string>
    <string name="sprint_mode">Sprint 40 Line</string>
    <string name="sprint_mode_desc">How fast can you clear 40 lines</string>
    <string name="modern_mode">Modern With Freeze</string>
    <string name="modern_mode_desc">Modern Game with random speed, freezes and explosions</string>

    <string name="page_total">Total</string>
    <string name="page_best">Best</string>
    <string name="score">Score</string>
    <string name="lines">Lines</string>
    <string name="pieces">Pieces</string>
    <string name="four_lines">4 Lines</string>
    <string name="t_spins">T Spins</string>
    <string name="zero">0</string>
    <string name="reset_stats">Reset Statistics</string>

    <string name="theme">Theme</string>
    <string name="dark">Dark</string>
    <string name="extra_dark">Amoled</string>
    <string name="light">Light</string>
    <string name="dynamic_colors">Dynamic colors</string>
    <string name="empty_cell_opacity">Empty cell opacity</string>
    <string name="cell_corner_radius">Cell corner radius</string>
    <string name="cell_spacing">Cell spacing</string>
    <string name="music">Music</string>
    <string name="sensitivity">Gestures sensitivity</string>
    <string name="x">X: %1$s</string>
    <string name="y">Y: %1$s</string>
    <string name="hard_drop">Hard drop triggers</string>
    <string name="max_time">Max time: %1$s ms</string>
    <string name="min_soft_drops">Min soft drops: %1$s</string>
    <string name="bi_direction_rotation">2-direction rotation</string>
    <string name="show_ghost_piece">Show ghost piece</string>
    <string name="enter_a_value">Enter a value (%1$s – %2$s)</string>
    <string name="enter_a_level">Enter a level (%1$s – %2$s)</string>
    <string name="delete_saved_game">Delete saved game:</string>
    <string name="delete_saved_game_desc">" To delete a saved game, hold down the «%1$s» button"</string>
    <string name="reset_settings">Reset Settings</string>

    <string name="about_1">This is the mobile modern version of tetris</string>
    <string name="about_2">
"""Classic arcade puzzle game where you have to stack falling tetromino — 4-block pieces, create solid lines out of them and play for the score

The original mechanics are retained here, with smooth controls, but with a modern, minimalist design"""
</string>
    <string name="author">Author:\n%1$s</string>
    <string name="project">Project:\n%1$s</string>

</resources>