<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.Settings">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/theme"
                style="@style/SettingsText" />

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/theme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                style="@style/ChipGroup">

                <com.google.android.material.chip.Chip
                    android:id="@+id/dark"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dark"
                    android:textSize="20sp"
                    style="@style/LeftChip" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/light"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/light"
                    android:textSize="20sp"
                    style="@style/RightChip" />

            </com.google.android.material.chip.ChipGroup>

        </LinearLayout>

        <com.google.android.material.materialswitch.MaterialSwitch
            android:id="@+id/dynamic_colors"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dynamic_colors"
            style="@style/SettingsText" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            style="@style/Divider" />

        <com.google.android.material.materialswitch.MaterialSwitch
            android:id="@+id/show_ghost_piece"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/show_ghost_piece"
            style="@style/SettingsText" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/empty_cell_opacity"
                style="@style/SettingsText" />

            <com.google.android.material.slider.Slider
                android:id="@+id/empty_cell_opacity"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:contentDescription="@string/empty_cell_opacity"
                android:valueFrom="0"
                android:valueTo="1"
                android:stepSize="0.5"
                app:labelBehavior="floating" />

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cell_corner_radius"
            style="@style/SettingsText" />

        <com.google.android.material.slider.Slider
            android:id="@+id/cell_corner_radius"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/cell_corner_radius"
            android:valueFrom="0"
            android:valueTo="1"
            android:stepSize="0.1"
            app:labelBehavior="floating" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cell_spacing"
            style="@style/SettingsText" />

        <com.google.android.material.slider.Slider
            android:id="@+id/cell_spacing"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/cell_spacing"
            android:valueFrom="0"
            android:valueTo="5"
            android:stepSize="1"
            app:labelBehavior="floating" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            style="@style/Divider" />

        <com.google.android.material.materialswitch.MaterialSwitch
            android:id="@+id/music"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/music"
            style="@style/SettingsText" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            style="@style/Divider" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sensitivity"
            style="@style/SettingsText" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/x"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/x"
                style="@style/SettingsButton" />

            <Button
                android:id="@+id/y"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/y"
                style="@style/SettingsButton" />

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hard_drop"
            style="@style/SettingsText" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:orientation="vertical">

            <Button
                android:id="@+id/max_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/max_time"
                style="@style/SettingsButton" />

            <Button
                android:id="@+id/min_soft_drops"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/min_soft_drops"
                style="@style/SettingsButton" />

        </LinearLayout>

        <com.google.android.material.materialswitch.MaterialSwitch
            android:id="@+id/bi_direction_rotation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bi_direction_rotation"
            style="@style/SettingsText" />

        <Button
            android:id="@+id/reset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/reset_settings"
            app:icon="@drawable/round_restart_alt_24"
            style="@style/ResetButton" />

    </LinearLayout>

</ScrollView>